[package]
name = "hypno-toadface"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Zolotukhin <zlogic@gmail.com>"]
repository = "https://github.com/zlogic/hypno-toadface"
license = "Apache-2.0"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drm = {version = "0.12", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
