[package]
name = "hypno-toadface"
version = "0.0.7"
edition = "2024"
authors = ["Dmitry Zolotukhin <zlogic@gmail.com>"]
repository = "https://github.com/zlogic/hypno-toadface"
license = "Apache-2.0"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }
rustix = { version = "0.38", default-features = false, features = ["std", "use-libc-auxv"] }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "thread_rng"] }
libc = { version = "*" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
